# protostar

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  args.py  binary_entrypoint.py  codecov.yml  conftest.py  deploy.py  generate_reference_docs.py  index.html  install.sh  install__testing_harness.sh  install_cairo.sh  install_testing_harness.sh  opensearch.xml  pre-commit  pre-push  protostar.py  protostar.spec  pyproject.toml  pyrightconfig.json  pytest.ini  search.html  sitemap.xml
.benchmarks/Darwin-CPython-3.7-64bit/: 0001_3164936de77160b06c6fea075faea0d5a5293384_20220722_120047.json  0001_40b118ab22d1af411a09e093807b20634cd6e665_20220726_130324_uncommited-changes.json
.benchmarks/Linux-CPython-3.8-64bit/: 0001_f46df95d2f302d6fab33a73cfcf24ee67b096acf_20220727_112837.json  0002_9bd23560b04ef2bbf6228685078f6260e25f02e0_20220729_175257.json  0003_7d54f1d88ecc65d7bafbc5d291f2989ab2a647ff_20220803_095524.json  0004_e70f8f9f15cc26844081dfd90d2e19bd6ab908e4_20220803_100923.json  0005_63a75dd9cb1293a204b6edc6514647f11761a9f4_20220803_102949.json  0006_98106087df55e30a15d9826408f1cdbd080e7538_20220803_110336.json  0007_886c6c262113e20aae4808440ee85cd76a1c40e7_20220803_120648.json
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: assign_issues_to_project.yml  assign_pr_author.yml  assign_size_label.yml  build_binaries.yml  build_docs.yml  builds-on-mac.yml  builds_on_mac.yml  checks.yml  deploy_docs.yml  deploy_docs.yml_  test_installation.yml
arg_types_generator/: generate_types.py
assets/css/: styles.455b2f0e.css  styles.7bfc7db2.css  styles.804854ae.css  styles.cd7075c1.css  styles.d8bdb701.css  styles.d9d38c80.css  styles.dd204ce2.css
assets/js/: 00c5ff3d.f4d13d8b.js  00f96e41.54c5d4fa.js  0196d80e.31fbd0b9.js  0196d80e.ad51d4ab.js  0467cfdf.cc24c42e.js  0467cfdf.f8d77bfa.js  04d6c593.6045727a.js  0506c045.c68211e5.js  051a09a6.a984a848.js  065b76a3.7f769745.js  071a63a7.1aca943c.js  071a63a7.1cd4434e.js  071a63a7.574800a2.js  071a63a7.70d115a5.js  071a63a7.9a968776.js  071a63a7.a0278753.js  (+671 more)
blog/: archive.html
cairo/: asserts.cairo
cairo-lang-0.11.0a0/: PKG-INFO
cast/: .gitignore  Cargo.toml  README.md
design_docs/: mock-tx-info.md  protostar-architecture.md  shell.md
docs/: 404.html  cli-reference.html  index.html  sitemap.xml
docs_generator/: __init__.py  reference_docs_generator.py  reference_docs_generator_test.py
protostar/: __init__.py  cairo_migrator.py  composition_root.py  configuration_profile_cli.py  conftest.py  contract_types.py  git.py  log-stuck  protostar_cli.py  protostar_cli_test.py  protostar_exception.py  run-1  rust_monkey.py  start.py  start_test.py
protostar-cli/: Cargo.toml
protostar-cli/src/: lib.rs  main.rs
protostar-cli/src/starknet_commands/: call.rs  declare.rs  invoke.rs  mod.rs
protostar-rust/: .gitignore  Cargo.toml
protostar-rust/.cargo/: config.toml
protostar-rust/cairo-lang-protostar/: Cargo.toml
protostar-rust/cairo-lang-protostar/src/: cli.rs  lib.rs
protostar-rust/cairo-lang-protostar/src/casm_generator/: mod.rs
protostar-rust/cairo-lang-protostar/src/test_collector/: mod.rs
protostar-rust/example_package/tests/: test_2.cairo  test_my_test.cairo
protostar-rust/pkg/: Scarb.toml
protostar-rust/pkg/tests/: test_2.cairo  test_my_test.cairo
protostar-rust/src/: cheatcodes_hint_processor.rs  lib.rs  main.rs  pretty_printing.rs  protostar_hint_processor.rs  running.rs  test_results.rs  test_stats.rs
protostar-rust/test-collector/: Cargo.toml
protostar-rust/test-collector/src/: lib.rs
protostar-rust/tests/: e2e.rs
protostar-rust/tests/common/: runner.rs
protostar-rust/tests/data/declare_test/: Scarb.toml
protostar-rust/tests/data/declare_test/src/: lib.cairo
protostar-rust/tests/data/declare_test/tests/: declare_test.cairo  test_declare.cairo
protostar-rust/tests/data/deploy_error_handling_test/: Scarb.toml
protostar-rust/tests/data/deploy_test/: Scarb.toml
protostar-rust/tests/data/deploy_test/tests/: test_deploy.cairo
protostar-rust/tests/data/dispatchers/: Scarb.toml
protostar-rust/tests/data/dispatchers/src/: erc20.cairo  hello_starknet.cairo
protostar-rust/tests/data/dispatchers/tests/: using_dispatchers.cairo
protostar-rust/tests/data/example_package/src/: lib.cairo
protostar-rust/tests/data/example_package/tests/: without_prefix.cairo
protostar-rust/tests/data/multicontract/: Scarb.toml
protostar-rust/tests/data/multicontract/src/: contract1.cairo  contract2.cairo
protostar-rust/tests/data/panic_decoding_test/tests/: test_panic_decoding.cairo
protostar-rust/tests/data/print_test/tests/: test_print.cairo
protostar-rust/tests/data/simple_test/: Scarb.toml
protostar-rust/tests/data/simple_test/tests/: ext_function_test.cairo  test_simple.cairo
protostar-rust/tests/e2e/: main.rs  running.rs
protostar-rust/tests/e2e/common/: fixture.rs  mod.rs  runner.rs
protostar-rust/tests/resources/example_package/: Scarb.toml
protostar_cairo/: cairo_project.toml
scripts/: apply_hooks.sh  build_arm64_installer.sh  build_installer.sh  bump_cairo_bindings.sh  circle_patch_approvals.sh  custom_checks.sh  deploy.py  deploy_prerelease.py  extra_rules.sh  generate_arg_types.py  generate_arg_types_test.py  generate_command_input_types.py  generate_command_input_types_test.py  generate_reference_docs.py  generate_reference_docs_test.py  get_code_check_paths.sh  install_all_bindings.sh  install_cairo_bindings.sh  install_protostar_rust_bindings.sh  notify.sh  run_format_check.sh  run_lint.sh  write_runtime_constants.py
src/: __init__.py  application.py  application_test.py  cli.py  config.py  conftest.py  main.py  main_test.py  protostar_app.py  protostar_cli.py  protostar_cli_test.py  protostar_exception.py  starknet_compilation.py  start.py  start_test.py
tests/: conftest.py  helper.py
website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+2535 files in other folders)
