[package]
name = "rust_test_runner"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cairo-lang-protostar = { path = "../cairo/crates/cairo-lang-protostar" }
cairo-lang-test-runner = { path = "../cairo/crates/cairo-lang-test-runner", version = "1.1.0" }
cairo-lang-runner = { path = "../cairo/crates/cairo-lang-runner", version = "1.1.0" }
cairo-lang-sierra-to-casm = { path = "../cairo/crates/cairo-lang-sierra-to-casm", version = "1.1.0" }
cairo-lang-sierra = { path = "../cairo/crates/cairo-lang-sierra", version = "1.1.0" }
cairo-felt = "0.3.0-rc1"
clap = { version = "4.2.7", features = ["derive"] }
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
itertools = "0.10.5"
walkdir = "2.3.3"
camino = "1.1.4"
scarb-metadata = "1.4.2"
console = "0.15.7"

[lib]
name = "rust_test_runner"
