[package]
name = "rust_test_runner"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cairo-lang-protostar = { path = "./cairo-lang-protostar" }
cairo-lang-test-runner = { path = "../cairo/crates/cairo-lang-test-runner", version = "2.0.0-rc2" }
cairo-lang-runner = { path = "../cairo/crates/cairo-lang-runner", version = "2.0.0-rc2" }
cairo-lang-sierra-to-casm = { path = "../cairo/crates/cairo-lang-sierra-to-casm", version = "2.0.0-rc2" }
cairo-lang-sierra = { path = "../cairo/crates/cairo-lang-sierra", version = "2.0.0-rc2" }
cairo-lang-utils = { path = "../cairo/crates/cairo-lang-utils", version = "2.0.0-rc2" }
blockifier = { git = "https://github.com/software-mansion-labs/blockifier.git", branch="kb/use-in-protostar" }
cairo-felt = "0.5.2"
clap = { version = "4.2.7", features = ["derive"] }
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
itertools = "0.10.5"
walkdir = "2.3.3"
camino = "1.1.4"
scarb-metadata = "1.4.2"
project-root = "0.2.2"
console = "0.15.7"
assert_fs = "1.0.13"
snapbox = "0.4.11"
once_cell = "1.18.0"
indoc = "2.0.1"
include_dir = "0.7.3"
tempfile = "3.6.0"

[lib]
name = "rust_test_runner"
