[package]
name = "rust_test_runner"
version = "0.1.0+rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cairo-lang-protostar = { path = "../cairo/crates/cairo-lang-protostar" }
cairo-lang-test-runner = { path = "../cairo/crates/cairo-lang-test-runner", version = "1.1.0" }
cairo-lang-runner = { path = "../cairo/crates/cairo-lang-runner", version = "1.1.0" }
cairo-lang-sierra-to-casm = { path = "../cairo/crates/cairo-lang-sierra-to-casm", version = "1.1.0" }
cairo-lang-sierra = { path = "../cairo/crates/cairo-lang-sierra", version = "1.1.0" }
blockifier = { git = "https://github.com/software-mansion-labs/blockifier.git", branch="kb/use-in-protostar" }
cairo-felt = "0.3.0-rc1"
clap = { version = "4.2.7", features = ["derive"] }
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
itertools = "0.10.5"
walkdir = "2.3.3"
camino = "1.1.4"
scarb-metadata = "1.4.2"
project-root = "0.2.2"
console = "0.15.7"
assert_fs = "1.0.13"
snapbox = "0.4.11"
once_cell = "1.18.0"
indoc = "2.0.1"
include_dir = "0.7.3"
tempfile = "3.6.0"

[lib]
name = "rust_test_runner"

[package.metadata.cross.build.env]
volumes = ["CAIRO_DEP=../cairo"]
[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH"
]
[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH"
]
[package.metadata.cross.target.aarch64-unknown-linux-musl]
pre-build = [
    "apt-get update"
]
